Swagger docs setup
